[gd_scene load_steps=5 format=3 uid="uid://b6mbyigugbb1q"]

[ext_resource type="PackedScene" uid="uid://yvp357wae8et" path="res://scenes/world_objects/WorldObject/WorldObject.tscn" id="1_x3idi"]
[ext_resource type="Script" path="res://scenes/world_objects/PipeNode/PipeNode.gd" id="2_a54dx"]
[ext_resource type="PackedScene" uid="uid://cvkbhq0h44hq3" path="res://scenes/ui/misc/MagneticArea.tscn" id="3_x61eb"]

[sub_resource type="GDScript" id="GDScript_evpk0"]
script/source = "extends Gizmo

var _pipe_node : PipeNode = null

func _ready() -> void:
	super._ready()
	_pipe_node = get_parent() as PipeNode

func _draw():
	var center := Vector2()
	var body_radius_px := _pipe_node.get_body_radius_px()
	
	# draw indicator circle
	if _pipe_node.picked or _pipe_node.hovering:
		var indic_color = Globals.SELECT_COLOR if _pipe_node.picked else Globals.HOVER_COLOR
		draw_circle(center, body_radius_px * 2, indic_color)
	
	draw_circle(center, body_radius_px, Color.DARK_GRAY)

func on_zoom_changed(_new_zoom: float, _inv_scale: Vector2) -> void:
	queue_redraw()
"

[node name="PipeNode" instance=ExtResource("1_x3idi")]
script = ExtResource("2_a54dx")

[node name="ManualDrawLayer" type="Node2D" parent="." index="0"]
script = SubResource("GDScript_evpk0")

[node name="MagneticArea" parent="." index="1" instance=ExtResource("3_x61eb")]
magnetic_physics_mask = 4
is_collector = true

[node name="InfoLabel" parent="." index="2"]
text = ""

[connection signal="position_change_request" from="MagneticArea" to="." method="_on_magnetic_area_position_change_request"]
